--- a/src/components/Works/works.scss
+++ b/src/components/Works/works.scss
@@ -51,7 +51,7 @@
 
         .left {
           flex: 4;
-          background-color: #99ddcc;
+          // background-color: #99ddcc;
           display: flex;
           height: 80%;
           align-items: center;
@@ -94,7 +94,7 @@
 
         .right {
           flex: 8;
-          background-color: #fff;
+          // background-color: #fff;
           height: 80%;
           display: flex;
           align-items: center;
